--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,8 @@ include_directories(
 
 set(CMAKE_CXX_FLAGS "-Wall")
 
+set(CMAKE_CXX_FLAGS_DEBUG "-ggdb")
+
 # make sure that the default is a Release
 if (NOT CMAKE_BUILD_TYPE)
     set (
