Reimplemented the QCA classes for new design.
 * reimplemented QCABond and QCAQuarterFilling for new class design (in qca.hpp)
 * seems to work (from first glance), but not tested if they are physically
   correct
 * runQca.cpp to run the qca code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,3 +27,7 @@ endif (NOT CMAKE_BUILD_TYPE)
 add_executable(runDiagonaliser
     runDiagonaliser.cpp 
 )
+
+add_executable(runQca
+    runQca.cpp
+)
