Nicer output for usage message.
 * now using eigen 3.0, updated cmake file accordingly
 * nicer output for optionsDescription() in CommandLineOptions; that's
   basically equivalent to the usage message

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,16 +5,16 @@ cmake_minimum_required(VERSION 2.6)
 
 
 ### set up paths and flags ###
-set(EIGEN_INCLUDE_DIR "~/src/include" CACHE PATH "Include path for eigen2")
+set(EIGEN_INCLUDE_DIR "~/src/include" CACHE PATH "Include path for eigen3")
 include_directories(
 	${EIGEN_INCLUDE_DIR}
 )
 
-set(CMAKE_CXX_FLAGS_DEBUG "-O0 -Wall -ggdb")
+set(CMAKE_CXX_FLAGS_DEBUG "-O0 -Wall -ggdb -DEIGEN_YES_I_KNOW_SPARSE_MODULE_IS_NOT_STABLE_YET")
 # TODO: why is there no -march=native on mac?
 # TODO: use newer gcc on mac
 #set(CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall -march=native -DNDEBUG")
-set(CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall -fopenmp -mtune=native -DNDEBUG")
+set(CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall -fopenmp -mtune=native -DNDEBUG -DEIGEN_YES_I_KNOW_SPARSE_MODULE_IS_NOT_STABLE_YET")
 
 # make sure that the default is a Release
 if (NOT CMAKE_BUILD_TYPE)
