Prototyping blockwise diagonalization continued.
 * implemented the blockwise diagonalization itself in the class
   Hamiltonian
 * started writing tests in systemTest.cpp, but so far it's mostly not
   tested
 * with this new approach construction of all matrices has to be
   deferred, thus there's now System::construct, etc

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -12,4 +12,8 @@ add_executable(basisTest basisTest.cpp)
 target_link_libraries(basisTest boost_unit_test_framework)
 add_test(basis basisTest)
 
-add_dependencies(buildtest utilitiesTest basisTest)
+add_executable(systemTest systemTest.cpp)
+target_link_libraries(systemTest boost_unit_test_framework)
+add_test(system systemTest)
+
+add_dependencies(buildtest utilitiesTest basisTest systemTest)
