Prototyping blockwise diagonalization continued.
 * moved Eigen/matrix related helper functions to eigenHelpers.hpp
 * tests for eigenHelpers
 * fixed EnsembleAverage so that it works with sparse eigenvectors
 * more tests for block-wise diagonalisation
 * seems to be mostly working, although I'm still stuck with some
   discrepancies/errors
 * blockwise diagonalisation is much faster than normal diagonalisation

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -16,4 +16,8 @@ add_executable(systemTest systemTest.cpp)
 target_link_libraries(systemTest boost_unit_test_framework)
 add_test(system systemTest)
 
-add_dependencies(buildtest utilitiesTest basisTest systemTest)
+add_executable(eigenHelpersTest eigenHelpersTest.cpp)
+target_link_libraries(eigenHelpersTest boost_unit_test_framework)
+add_test(eigenHelpers eigenHelpersTest)
+
+add_dependencies(buildtest utilitiesTest basisTest systemTest eigenHelpersTest)
