Maximum size of basis is configurable with cmake.
 * number of bits used for basis is now configurable with cmake.
 * confirmed that with 32 bits I can run fixed2DP for 3 cells and bondDP
   for 5 cells on my office computer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,22 +14,24 @@ include_directories(
 	${EIGEN_INCLUDE_DIR}
 )
 
+set(BASIS_NUMBER_OF_BITS "16" CACHE STRING "Number of bits used to store basis. Should be 16, 32 or 64. Generally this should be equal to or larger than 8 times the number of QCA cells.")
+
 ### check compiler and set flags appropriately ###
 include(CheckCXXCompilerFlag)
 check_cxx_compiler_flag(-debug IS_INTEL_COMPILER)
 if (IS_INTEL_COMPILER)
 	message(STATUS "Intel compiler detected")
-	set(USE_CXX_FLAGS_DEBUG "-O0 -Wall -g -DEIGEN_YES_I_KNOW_SPARSE_MODULE_IS_NOT_STABLE_YET" CACHE STRING "")
+	set(USE_CXX_FLAGS_DEBUG "-O0 -Wall -g" CACHE STRING "")
 	#set(USE_CXX_FLAGS_RELEASE "-fast -openmp -Wall -DNDEBUG -DEIGEN_YES_I_KNOW_SPARSE_MODULE_IS_NOT_STABLE_YET" CACHE STRING "")
-	set(USE_CXX_FLAGS_RELEASE "-fast -Wall -DNDEBUG -DEIGEN_YES_I_KNOW_SPARSE_MODULE_IS_NOT_STABLE_YET" CACHE STRING "")
+	set(USE_CXX_FLAGS_RELEASE "-fast -Wall -DNDEBUG" CACHE STRING "")
 else (IS_INTEL_COMPILER)
 	message(STATUS "GNU compiler detected")
-	set(USE_CXX_FLAGS_DEBUG "-m64 -O0 -Wall -ggdb -DEIGEN_YES_I_KNOW_SPARSE_MODULE_IS_NOT_STABLE_YET" CACHE STRING "")
-	set(USE_CXX_FLAGS_RELEASE "-m64 -O3 -Wall -fopenmp -march=native -DNDEBUG -DEIGEN_YES_I_KNOW_SPARSE_MODULE_IS_NOT_STABLE_YET" CACHE STRING "")
+	set(USE_CXX_FLAGS_DEBUG "-m64 -O0 -Wall -ggdb" CACHE STRING "")
+	set(USE_CXX_FLAGS_RELEASE "-m64 -O3 -Wall -fopenmp -march=native -DNDEBUG" CACHE STRING "")
 endif (IS_INTEL_COMPILER)
 
-set(CMAKE_CXX_FLAGS_DEBUG ${USE_CXX_FLAGS_DEBUG})
-set(CMAKE_CXX_FLAGS_RELEASE ${USE_CXX_FLAGS_RELEASE})
+set(CMAKE_CXX_FLAGS_DEBUG "${USE_CXX_FLAGS_DEBUG} -DEIGEN_YES_I_KNOW_SPARSE_MODULE_IS_NOT_STABLE_YET -DSTORAGE_TYPE_OF_FERMIONIC_STATE=uint${BASIS_NUMBER_OF_BITS}_t")
+set(CMAKE_CXX_FLAGS_RELEASE "${USE_CXX_FLAGS_RELEASE} -DEIGEN_YES_I_KNOW_SPARSE_MODULE_IS_NOT_STABLE_YET -DSTORAGE_TYPE_OF_FERMIONIC_STATE=uint${BASIS_NUMBER_OF_BITS}_t")
 
 # make sure that the default is a Release
 if (NOT CMAKE_BUILD_TYPE)
