--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -581,7 +581,7 @@ WARN_LOGFILE           =
 # directories like "/usr/src/myproject". Separate the files or directories
 # with spaces.
 
-INPUT                  = "${ExactDiagonalization_SOURCE_DIR}" \
+INPUT                  = "${ExactDiagonalization_SOURCE_DIR}/src" \
                          "${ExactDiagonalization_SOURCE_DIR}/doc"
 
 # This tag can be used to specify the character encoding of the source files
