Rewrote main program for new configuration scheme.
 * runQca now uses the new configuration scheme
 * Option, CommandLineOptions, etc from utilities.hpp are no longer used
 * main program is much simpler and shorter
 * runQca now only accepts configuration in json format, either directly
   on the command line or via a config file
 * Runner class to run the program / simulation
 * program accepts "simplified json" (quotation characters not
   necessary, all values are treated as string literals), implemented in
   Configurator::jsonify
 * fixed reading back of configuration for CQca and CLayout (method
   getConfig): unknown configuration directives are now preserved
 * fixed a couple of warnings when compiling with gcc
 * with this the new configuration scheme is basically completed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,14 @@ find_path(
 	PATHS ~/include ~/src/include ~/o/include ~/o/src/include /opt/local/include /sw/include
 	PATH_SUFFIXES eigen3 eigen
 )
+find_path(
+	BOOST_INCLUDE_DIR
+	boost/test/unit_test.hpp
+	PATHS ~/include ~/src/include ~/o/include ~/o/src/include /opt/local/include /sw/include
+)
 include_directories(
 	${EIGEN_INCLUDE_DIR}
+	${BOOST_INCLUDE_DIR}
 )
 
 set(BASIS_NUMBER_OF_BITS "16" CACHE STRING "Number of bits used to store basis. Should be 16, 32 or 64. Generally this should be equal to or larger than 8 times the number of QCA cells.")
