--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,7 @@ if ("${CXX_VERSION}" MATCHES "Intel")
 elseif("${CXX_VERSION}" MATCHES "clang")
     message(STATUS "Clang compiler detected")
     set(COMPILER "Clang")
-elseif("${CXX_VERSION}" MATCHES "GCC")
+elseif("${CXX_VERSION}" MATCHES "(GCC)|(gcc)|(g\\+\\+)")
     message(STATUS "GCC compiler detected")
     set(COMPILER "GCC")
 else()
