Parallelized stochastic optimization.
 * CQca now has a copy constructor (and assignement operator) that
   actually work
 * implementation of copy constructor is not very efficient (e.g. the
   basis and everything will get reconstructed on copying)
 * parallelized the stochastic maximum finder with openmp
 * parallelization is probably not optimal, but works

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,10 +44,13 @@ if (${COMPILER} STREQUAL "Intel")
     message(STATUS "Setting flags for Intel compiler")
  	set(USE_CXX_FLAGS_DEBUG "-O0 -Wall -g" CACHE STRING "")
  	set(USE_CXX_FLAGS_RELEASE "-fast -Wall -DNDEBUG" CACHE STRING "")
-elseif (${COMPILER} STREQUAL "Clang" OR ${COMPILER} STREQUAL "GCC")
+elseif (${COMPILER} STREQUAL "GCC")
+    message(STATUS "Setting flags for GCC and Clang compiler")
+    set(USE_CXX_FLAGS_DEBUG "-m64 -O0 -Wall -ggdb -fopenmp" CACHE STRING "")
+ 	set(USE_CXX_FLAGS_RELEASE "-m64 -O3 -Wall -march=native -fopenmp -DNDEBUG" CACHE STRING "")
+elseif (${COMPILER} STREQUAL "Clang")
     message(STATUS "Setting flags for GCC and Clang compiler")
     set(USE_CXX_FLAGS_DEBUG "-m64 -O0 -Wall -ggdb" CACHE STRING "")
-    # -fopenmp 
  	set(USE_CXX_FLAGS_RELEASE "-m64 -O3 -Wall -march=native -DNDEBUG" CACHE STRING "")
 endif()
 
