Python QCA layer. Unit tests.
* Python QCA module is more or less complete: basic functionality is all
  covered
* unit tests for Python qca module demonstrate usage; test and
  demonstrate how the qca module works together with the coma library
* coma needs more work, but qca seems to work all fine

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,13 +60,13 @@ if (${COMPILER} STREQUAL "Intel")
  	set(USE_CXX_FLAGS_DEBUG "-O0 -Wall -g" CACHE STRING "")
  	set(USE_CXX_FLAGS_RELEASE "-fast -Wall -DNDEBUG" CACHE STRING "")
 elseif (${COMPILER} STREQUAL "GCC")
-    message(STATUS "Setting flags for GCC and Clang compiler")
+    message(STATUS "Setting flags for GCC compiler")
     set(USE_CXX_FLAGS_DEBUG "-std=c++11 -m64 -O0 -Wall -Wno-unused-local-typedefs -ggdb -fopenmp" CACHE STRING "")
  	set(USE_CXX_FLAGS_RELEASE "-std=c++11 -m64 -O3 -Wall -Wno-unused-local-typedefs -march=native -fopenmp -DNDEBUG" CACHE STRING "")
 elseif (${COMPILER} STREQUAL "Clang")
-    message(STATUS "Setting flags for GCC and Clang compiler")
-    set(USE_CXX_FLAGS_DEBUG "-m64 -O0 -Wall -ggdb" CACHE STRING "")
- 	set(USE_CXX_FLAGS_RELEASE "-m64 -O3 -Wall -march=native -DNDEBUG" CACHE STRING "")
+    message(STATUS "Setting flags for Clang compiler")
+    set(USE_CXX_FLAGS_DEBUG "-std=c++11 -m64 -O0 -Wall -ggdb" CACHE STRING "")
+ 	set(USE_CXX_FLAGS_RELEASE "-std=c++11 -m64 -O3 -Wall -march=native -DNDEBUG" CACHE STRING "")
 endif()
 
 set(CMAKE_CXX_FLAGS_DEBUG "${USE_CXX_FLAGS_DEBUG} -DSTORAGE_TYPE_OF_FERMIONIC_STATE=uint${BASIS_NUMBER_OF_BITS}_t")
