--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -1,10 +1,9 @@
 package:
     name: qca
-    version: 8.0.0
+    version: 8.1.0
 
 source:
-    #fn: qca.tar.bz2
-    #url: file:///home/burkhard/qca.tar.bz2
+    #fn: /home/burkhard/qca.tar.bz2
     git_url: ssh://git@bitbucket.org/meznom/exactdiagonalization.git
 
 requirements:
